# property-management

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/analysis/: copy.py  photos.py
src/benchmark/: collector.py  ranker.py
src/pipeline/: leads.py  runner.py
src/reports/: pdf_builder.py
src/scraper/: city_top.py  listing.py  parser.py
src/utils/: config.py
tests/: conftest.py  test_analysis.py  test_benchmark.py  test_report.py  test_scraper.py
